package com.pdm.to_do_compose.util

object TestTags {
    object ListScreen {
        const val FAB_BUTTON = "floating_button"
        const val DEFAULT_APP_BAR = "default_app_bar"
        const val SEARCH_APP_BAR = "search_app_bar"
        const val TASKS_LIST = "tasks_list"
        const val SEARCH_BUTTON_ACTION = "search_button_action"
        const val SORT_BUTTON_ACTION = "sort_button_action"
        const val DELETE_ALL_BUTTON_ACTION = "delete_all_button_action"
        const val CLOSE_BUTTON_ACTION = "close_button_action"
        const val SEARCH_TEXT_INPUT = "search_text_input"
    }

    object TaskDetailsScreen {
        const val TASK_DETAILS_APP_BAR = "task_details_app_bar"
        const val SAVE_BUTTON_ACTION = "save_button_action"
        const val BACK_BUTTON_ACTION = "back_arrow_button_action"
        const val DELETE_BUTTON_ACTION= "delete_button_action"
    }
}